List uploads and deletes work on frontend
