# server/controllers/lists.js
@@ -8,6 +8,7 @@ module.exports = function () {
   return {
     async uploadList (req, res) {
       // Update general game movie list
+      console.log("PUBLIC", req.body.public)
       if(req.body.name === process.env.ADMIN_PASSWORD){ 
         await Movie.deleteMany({}) // clear collection
         let stream = fs.createReadStream(req.file.path);
@@ -25,7 +26,8 @@ module.exports = function () {
       } else {
         let list = new List({
           name: req.body.name,
-          public: req.body.public
+          public: req.body.public,
+          owner: req.enforcer.params.userId
         })
         let movies = []
         let stream = fs.createReadStream(req.file.path);
@@ -33,7 +35,7 @@ module.exports = function () {
           .pipe(csvParser.parse({ headers: true }))
           .on('error', error => res.status(500).send(error))
           .on('data', async row =>  {
-            movies.push({row})
+            movies.push({...row})
           })
           .on('end', async rowCount => {
             list.movies = movies
@@ -44,14 +46,39 @@ module.exports = function () {
       }
     },
 
-    async updateList (req, res) {
+    async getUserLists (req, res){
+      let lists = await List.find({ 'owner': req.user._id}).exec()
+      res.send(lists)
+    },
 
+    async updateList (req, res) {
+      const data = req.enforcer.body
+      const { listId } = req.enforcer.params
+      let list = await List.findById(listId, "owner name public");
+      if (!list) res.status(404).send(`List with ID ${listId} does not exist.`)
+      else if (list.owner.toString() !== req.user._id.toString()) res.status(401).send()
+      else {
+        // Use request body to update user
+        if (data.public !== null || data.public !== undefined) {
+          list.public = data.public
+        }
+        if (data.name) {
+          list.name = data.name
+        }
+        let result = await list.save();
+        res.status(200).send(result);
+      }
       
     },
 
     async deleteList (req, res) {
-
-      
+      const { listId } = req.enforcer.params
+      let list = await List.findById(listId).exec();
+      if (list === null) res.status(404).send(`list with ID ${listId} does not exist.`)
+      else {
+        await List.deleteOne({ _id: listId })
+        res.status(204).send()
+      }
     },
 
     async startMovieList (req, res) {
